# backend/doc/openapi-docs.json
@@ -138,6 +138,28 @@
         },
         "type": "object"
       },
+      "HttpResponseDtoListTeamAnswerDto": {
+        "description": "Response from the server",
+        "properties": {
+          "data": {
+            "description": "The data that the server will send in the response, can be null",
+            "items": {
+              "$ref": "#/components/schemas/TeamAnswerDto"
+            },
+            "type": "array"
+          },
+          "message": {
+            "description": "A message explaining the response, in case of errors",
+            "type": "string"
+          },
+          "status": {
+            "description": "Response status: success or error",
+            "enum": ["SUCCESS", "ERROR"],
+            "type": "string"
+          }
+        },
+        "type": "object"
+      },
       "HttpResponseDtoListTeamDto": {
         "description": "Response from the server",
         "properties": {
@@ -304,7 +326,7 @@
   },
   "info": {
     "title": "Rebus backend",
-    "version": "2.1.0"
+    "version": "2.2.0"
   },
   "openapi": "3.0.1",
   "paths": {
@@ -339,6 +361,39 @@
           }
         },
         "summary": "Get all answers",
+        "tags": ["Admin endpoints"]
+      }
+    },
+    "/answers/long": {
+      "get": {
+        "operationId": "getAllAnswers",
+        "responses": {
+          "200": {
+            "content": {
+              "*/*": {
+                "schema": {
+                  "$ref": "#/components/schemas/HttpResponseDtoListTeamAnswerDto"
+                }
+              }
+            },
+            "description": "OK, list of all answers in the data field"
+          },
+          "403": {
+            "content": {
+              "*/*": {
+                "schema": {
+                  "example": {
+                    "data": "",
+                    "message": "Must log in as admin",
+                    "status": "ERROR"
+                  },
+                  "type": "string"
+                }
+              }
+            },
+            "description": "Forbidden, no access to answer listing"
+          }
+        },
         "tags": ["Admin endpoints"]
       }
     },
